# social_dive

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUMMARY.md  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
social_dive/: __init__.py  cli.py  config.py  cookie_extract.py  core.py  doctor.py  env.py  http_client.py  probe.py
social_dive/backends/: __init__.py  opencli.py
social_dive/channels/: __init__.py  _social.py  arxiv.py  base.py  bilibili.py  crossref.py  devto.py  doi_resolver.py  europe_pmc.py  exa_search.py  facebook.py  github.py  hacker_news.py  instagram.py  linkedin.py  openalex.py  pubmed.py  reddit.py  rss.py  semantic_scholar.py  stack_overflow.py  twitter.py  v2ex.py  web.py  wikipedia.py  xiaohongshu.py  xiaoyuzhou.py  xueqiu.py  youtube.py
social_dive/formatters/: __init__.py  json_fmt.py  markdown.py  summary.py
social_dive/integrations/: __init__.py  mcp_server.py
social_dive/llm/: __init__.py  anthropic_provider.py  base.py  nvidia.py  openai_provider.py
social_dive/skill/: SKILL.md
src/: lib.rs
tests/: __init__.py  test_base.py  test_channel_contracts.py  test_channels.py  test_cli.py  test_config.py  test_core.py  test_doi_resolver.py  test_http_client.py  test_installer.py  test_mcp_server.py  test_rust_core.py  test_schema.py  test_social_channels.py  test_social_channels_cn.py  test_social_infra.py  test_web_channel.py
