[package]
name = "social-dive-core"
version = "0.2.0"
edition = "2021"
description = "Rust performance core for Social Dive — HTML→Markdown parser and concurrent HTTP fetcher"
license = "MIT"

[lib]
name = "_social_dive_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
scraper = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
