[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "social-dive"
version = "0.1.0"
description = "AI-agent internet-access capability layer for 20+ knowledge sources — installer, doctor, config tool with pluggable LLM backends."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Social Dive Contributors"},
]
keywords = ["ai", "agent", "research", "scraping", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "openai>=1.30",
    "arxiv>=2.1",
    "feedparser>=6.0",
    "biopython>=1.83",
    "youtube-transcript-api>=0.6",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.5",
    "respx>=0.21",
    "tomli>=2.0; python_version < '3.11'",
]
anthropic = [
    "anthropic>=0.30",
]

[project.scripts]
social-dive = "social_dive.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "social_dive._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
# No pinned python_version: CI already runs mypy separately under 3.10/3.11/
# 3.12 (the full support matrix), so let each run target its own interpreter.
# A pin here previously broke the 3.12 leg specifically — it forced mypy to
# parse *third-party* stub files (numpy, pulled in transitively via openai's
# optional numpy_proxy extra) under 3.10 syntax rules, and numpy's stubs use
# Python 3.12-only PEP 695 `type` statements. This isn't about our own code's
# compatibility (already checked per-matrix-leg); it's stub-parsing only.
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Third-party libs that ship no py.typed marker / stub package, and the
# Rust extension (built by maturin, not present in a type-check-only env).
[[tool.mypy.overrides]]
module = [
    "arxiv", "feedparser", "Bio", "Bio.*", "mcp", "mcp.*", "anthropic",
    "social_dive._core",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
